<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_login_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.auth.LoginFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/toolbar_login"/>

    <TextView
        android:id="@+id/tv_login_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_extra_big"
        android:layout_marginTop="@dimen/padding_extra_big"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_login" />

    <TextView
        android:id="@+id/tv_login_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/tv_login_section"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_section"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Please login to continue" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="100dp"
        android:alpha="0"
        tools:alpha="1"
        android:layout_height="100dp"
        android:src="@drawable/dicoding"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login_desc"
        app:layout_constraintEnd_toEndOf="@+id/textInput_email_login"
        app:layout_constraintTop_toTopOf="@+id/tv_login_section" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <com.example.storyapp.ui.customviews.MyEditText
        android:id="@+id/textInput_email_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_big"
        android:layout_marginVertical="@dimen/padding_extra_big"
        android:drawablePadding="@dimen/padding_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <com.example.storyapp.ui.customviews.MyEditText
        android:id="@+id/textInput_password_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_big"
        android:layout_marginVertical="@dimen/padding_extra_big"
        android:drawablePadding="@dimen/padding_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/padding_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInput_email_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_guest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_big"
        android:layout_marginVertical="@dimen/padding_extra_big"
        android:enabled="true"
        android:minWidth="300dp"
        android:text="@string/add_story_as_guest"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textStyle="bold"
        app:cornerRadius="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInput_password_login" />


    <com.example.storyappproject.ui.customview.CustomText
        android:id="@+id/tv_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_big"
        android:gravity="center"
        android:text="@string/create_account"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_big"
        android:layout_marginBottom="@dimen/padding_big"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textStyle="bold"
        app:cornerRadius="@dimen/padding_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>